--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-# 题库配置
-QUIZ_DATA_PATH=lib/quiz_data_Example.json
-QUIZ_ENGLISH_PATH=lib/quiz_English_data.json
-# 可选题库列表（逗号分隔，便于前端下拉选择）
-QUIZ_LIST=quiz_data_Example,quiz_English_data
+SERVER_PORT=7222
