--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,37 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+       
+       
         {
-            "type": "node",
-            "request": "launch",
             "name": "Launch Program",
+            "program": "${workspaceFolder}/server.js",
+            "request": "launch",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\server.js"
+            "preLaunchTask": "npm: NewPort",
+            "type": "node"
+        },
+
+        {
+            "type": "msedge",
+            "name": "Launch Microsoft Edge",
+            "request": "launch",
+            "runtimeArgs": [
+                "--remote-debugging-port=9222"
+            ],
+            "url": "http://localhost:7000"
+        }
+    ],
+    "compounds": [
+        {
+            "name": "Launch Full",
+            "configurations": [
+                "Launch Program",
+                "Launch Microsoft Edge"
+            ]
         }
     ]
 }
